# mcp

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CONTRIBUTING.md  DESIGN_GUIDELINES.md  DEVELOPER_GUIDE.md  README.md  VIBE_CODING_TIPS_TRICKS.md  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml  tailwind.config.js
src/agent-test/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.sh
src/agent-test/awslabs/agent_test/: agent_test_dataset.py  agent_test_harness.py  agent_tool_test.py  bedrock_deepeval.py
src/agent-test/examples/: agent_test_cases.yaml
src/agent-test/integ_tests/: README.md  test_agent_tools.py
src/agent-test/tests/: conftest.py  test_agent_test_dataset.py  test_agent_test_harness.py  test_agent_tool_test.py  test_agent_tools.py  test_bedrock_deepeval.py  test_yaml_loading.py
src/aws-api-mcp-server/: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml  testDockerfile  trivy-results.sarif
src/aws-api-mcp-server/awslabs/aws_api_mcp_server/: __init__.py  server.py
src/aws-api-mcp-server/tests/: fixtures.py  history_handler.py  test_server.py
src/aws-api-mcp-server/tests/agent_scripts/: __init__.py  test_manager.py
src/aws-api-mcp-server/tests/aws/: test_driver.py  test_pagination.py  test_service.py  test_services.py
src/aws-api-mcp-server/tests/common/: test_cloudwatch_logger.py  test_config.py  test_config_cloudwatch.py  test_helpers.py  test_initialize_logger.py
src/aws-api-mcp-server/tests/kb/: test_dense_retriever.py  test_download_latest_embeddings.py  test_generate_embeddings.py  test_knowledge_base.py
src/aws-api-mcp-server/tests/metadata/: test_read_only_operations_list.py
src/aws-api-mcp-server/tests/parser/: test_lexer.py  test_parser.py  test_parser_customizations.py
src/aws-support-mcp-server/: README.md  pyproject.toml
src/aws-support-mcp-server/awslabs/aws_support_mcp_server/: __init__.py  client.py  consts.py  debug_helper.py  errors.py  formatters.py  models.py  server.py
src/aws-support-mcp-server/tests/: conftests.py  test_aws_support_mcp_server.py  test_models.py
src/billing-cost-management-mcp-server/: Dockerfile  NOTICE  README.md  __init__.py  docker-healthcheck.sh  pyproject.toml  requirements.txt  uv-requirements.txt
src/billing-cost-management-mcp-server/awslabs/billing_cost_management_mcp_server/: __init__.py  models.py  server.py
src/billing-cost-management-mcp-server/tests/: README.md  conftest.py  test_models.py  test_server.py
src/billing-cost-management-mcp-server/tests/prompts/: __init__.py  test_prompts.py
src/billing-cost-management-mcp-server/tests/tools/: __init__.py  fixtures.py  test_aws_pricing_tools.py  test_budget_tools.py  test_compute_optimizer_tools.py  test_cost_anomaly_tools.py  test_cost_anomaly_tools_enhanced.py  test_cost_comparison_tools.py  test_cost_explorer_operations.py  test_cost_explorer_tools.py  test_cost_optimization_hub_helpers.py  test_cost_optimization_hub_tools.py  test_free_tier_usage_tools_new.py  test_recommendation_details_tools.py  test_ri_performance_tools.py  test_sp_performance_tools.py  test_storage_lens_tools.py  test_unified_sql_tools.py
src/billing-cost-management-mcp-server/tests/utilities/: test_aws_service_base.py  test_sql_utils.py
src/core-mcp-server/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/core-mcp-server/awslabs/core_mcp_server/: __init__.py  server.py
src/core-mcp-server/tests/: conftest.py  test_main.py  test_response_types.py  test_server.py
src/openapi-mcp-server/: .coveragerc  .dockerignore  .gitignore  AUTHENTICATION.md  AWS_BEST_PRACTICES.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  NOTICE  OBSERVABILITY.md  README.md  docker-healthcheck.sh  liteDockerfile  pyproject.toml  pyrightconfig.json
src/openapi-mcp-server/awslabs/openapi_mcp_server/: __init__.py  server.py
src/openapi-mcp-server/tests/: README.md  test_api_name.py  test_cache_coverage_89.py  test_client.py  test_coverage_boost.py  test_init.py  test_main.py  test_main_extended.py  test_openapi_coverage_89.py  test_server.py  test_server_auth_errors.py  test_server_coverage_boost.py  test_server_coverage_boost_2.py  test_server_exception_handling.py  test_server_extended.py  test_server_httpx_version.py  test_server_route_logging.py  test_server_signal_handlers.py
src/openapi-mcp-server/tests/api/: test_config.py
src/openapi-mcp-server/tests/auth/: test_api_key_auth.py  test_auth_cache.py  test_auth_errors.py  test_auth_factory.py  test_auth_factory_caching.py  test_auth_factory_coverage.py  test_auth_protocol.py  test_auth_protocol_additional.py  test_auth_protocol_boost.py  test_auth_protocol_coverage.py  test_auth_protocol_extended.py  test_auth_protocol_improved.py  test_auth_provider_additional.py  test_base_auth.py  test_base_auth_coverage.py  test_basic_auth.py  test_bearer_auth.py  test_cognito_auth.py  test_cognito_auth_additional_coverage.py  test_cognito_auth_boost_coverage.py  test_cognito_auth_client_credentials.py  test_cognito_auth_coverage_boost.py  test_cognito_auth_exceptions.py  test_register.py  test_register_coverage.py
src/openapi-mcp-server/tests/prompts/: test_mcp_prompt_manager.py  (+7 more)
src/well-architected-security-mcp-server/: PROMPT_TEMPLATE.md  README.md  pyproject.toml
src/well-architected-security-mcp-server/tests/: README.md  __init__.py  conftest.py  test_access_analyzer_fix.py  test_network_security.py  test_network_security_additional.py  test_prompt_utils.py  test_prompt_utils_coverage.py  test_resource_utils.py  test_resource_utils_fix.py  test_security_services.py  test_security_services_additional.py  test_security_services_coverage.py  test_server.py  test_server_additional.py  test_server_coverage.py  test_server_prompts.py  test_server_security_findings.py  test_storage_security.py  test_storage_security_additional.py  test_storage_security_comprehensive.py  test_storage_security_edge_cases.py  test_storage_security_recommendations.py  test_user_agent_config.py
(+1524 files in other folders)
